<resources>
    <string name="app_name">ScienceGame</string>
    <string name="username">Потребителско име</string>
    <string name="password">Парола</string>
    <string name="login_button">Вход</string>
    <string name="login_not_registered">Нямаш регистрация?</string>
    <string name="login_register">Регистрирай се</string>
    <string name="progress_dialog_please_wait">Моля изчакайте!</string>
    <string name="register_button">Регистрация</string>
    <string name="login_from_register">Имаш регистрация?</string>
    <string name="repeat_password">Повтори паролата</string>
    <string name="menu_logout">Изход</string>
    <string name="question">Въпрос</string>
    <string name="questionDescription">Описание</string>
    <string name="addQuestion">Добави въпрос</string>
    <string name="total_answers">Избери брой отговори</string>
    <string name="correct_answer">Верен отговор</string>
    <string name="answer">Отговор %1$s</string>
    <string name="play_game">Начало на играта</string>
    <string name="nextAnswer">Следващ</string>
    <string name="correctAnswerDialog">Верен отговор!</string>
    <string name="wrongAnswerDialog">Грешен отговор!</string>
    <string name="questionNumber">%1$s / %2$s</string>
    <string name="finishGame">Край на играта</string>
    <string name="statisticButton">Статистика</string>
</resources>
